<resources>
    <string name="app_name">MAD Project 2</string>
    <string name="heading1">Fill Your Data</string>
    <string name="button1">Submit</string>
    <string name="textP1">Net Salary</string>
    <string name="textP2">Loan Amounts</string>
    <string name="textP3">Foods</string>
    <string name="textP4">Commitments</string>
    <string name="textP5">Entertainment</string>
    <string name="textP6">Other Expenses</string>
    <string name="tax1">Am I liable for tax?</string>
    <string name="depositamount">Deposit Amount</string>
    <string name="bankname">Bank Name</string>
    <string name="period">Period</string>
    <string name="totalamount">Total Amount</string>
    <string name="individual">Individual</string>
    <string name="company">Company</string>
    <string name="partnership">Partnership</string>
    <string name="statutory_levies_charged_on_a_taxpayer_by_the_government">Statutory levies charged on a taxpayer by the government</string>
    <string name="what_is_tax">What is tax?</string>
    <string name="so_are_you_a_taxpayer">So are you a taxpayer?</string>
    <string name="check_your_tax_eligibility">Check your tax eligibility</string>
    <string name="background_image">background image</string>
    <string name="check_your_tax_liability_using_this_free_online_assement">Check your tax liability using this free online assement!</string>
    <string name="what_are_the_types_of_taxes_available">What are the types of taxes available?</string>
</resources>