<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="src_in">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="479dp"
        android:layout_height="744dp"
        android:background="@drawable/background1"
        android:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/vecteezy_background_green_fj0121_generated" />

    <View
        android:id="@+id/view"
        android:layout_width="423dp"
        android:layout_height="708dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:background="#8FEADDDD"
        android:backgroundTint="#F2F4F0F0"
        android:drawingCacheQuality="auto"
        android:fadeScrollbars="false"
        android:filterTouchesWhenObscured="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/heading1"
        android:layout_width="234dp"
        android:layout_height="49dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:linksClickable="false"
        android:text="@string/heading1"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <EditText
        android:id="@+id/textP1"
        android:layout_width="395dp"
        android:layout_height="49dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/textP1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading1" />

    <EditText
        android:id="@+id/textP2"
        android:layout_width="386dp"
        android:layout_height="52dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="136dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/textP2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <EditText
        android:id="@+id/textP3"
        android:layout_width="387dp"
        android:layout_height="52dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="75dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/textP3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textP2" />

    <EditText
        android:id="@+id/textP4"
        android:layout_width="387dp"
        android:layout_height="63dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/textP4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textP3" />

    <EditText
        android:id="@+id/textP5"
        android:layout_width="381dp"
        android:layout_height="58dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/textP5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textP4" />

    <EditText
        android:id="@+id/textP6"
        android:layout_width="387dp"
        android:layout_height="63dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/textP6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textP5" />

    <Button
        android:id="@+id/button1"
        android:layout_width="353dp"
        android:layout_height="71dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="60dp"
        android:text="@string/button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textP6" />

</androidx.constraintlayout.widget.ConstraintLayout>